--- a/functions/package.json
+++ b/functions/package.json
@@ -10,10 +10,12 @@
   "scripts": {
     "serve": "firebase emulators:start --only functions,database",
     "deploy": "firebase deploy --only functions,database",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "start:bot": "node telegram-bot.js"
   },
   "dependencies": {
     "firebase-admin": "^12.7.0",
-    "firebase-functions": "^5.1.1"
+    "firebase-functions": "^5.1.1",
+    "node-telegram-bot-api": "^0.64.0"
   }
 }
