--- a/functions/.env
+++ b/functions/.env
@@ -2,7 +2,7 @@
 # Скопируйте этот файл в .env и заполните своими данными
 
 # Токен бота от BotFather
-TELEGRAM_BOT_TOKEN=8429095689:AAGkpdRXglKH8UB6cYwUQr4N_iIBphZ-3O8
+TELEGRAM_BOT_TOKEN=8363770047:AAGO7d2KO1i6vaZK97eU-KGuaaSJyNSBun0
 
 # Админ пароль для доступа к данным
 ADMIN_PASSWORD=20091326
@@ -10,7 +10,7 @@ ADMIN_PASSWORD=20091326
 # Разрешённые Telegram ID пользователей (через запятую)
 # Оставьте пустым для отключения проверки
 # Чтобы узнать свой Telegram ID, отправьте боту @userinfobot
-ALLOWED_TELEGRAM_IDS=
+ALLOWED_TELEGRAM_IDS=7137254288
 
 # Firebase Database URL
 FIREBASE_DATABASE_URL=https://web-messenger-1694a-default-rtdb.firebaseio.com
