--- a/functions/.env
+++ b/functions/.env
@@ -10,7 +10,8 @@ ADMIN_PASSWORD=20091326
 # Разрешённые Telegram ID пользователей (через запятую)
 # Оставьте пустым для отключения проверки
 # Чтобы узнать свой Telegram ID, отправьте боту @userinfobot
-ALLOWED_TELEGRAM_IDS=7137254288
+# Пустое значение = все могут использовать (для тестирования)
+ALLOWED_TELEGRAM_IDS=
 
 # Firebase Database URL
 FIREBASE_DATABASE_URL=https://web-messenger-1694a-default-rtdb.firebaseio.com
