--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
     "start:bot": "node telegram-bot.js"
   },
   "dependencies": {
+    "dotenv": "^17.3.1",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^5.1.1",
     "node-telegram-bot-api": "^0.64.0"
